@@ -4,21 +4,19 @@ import java.util.Collections;
 public class MergeSort {
   
   public static CardPile sort(CardPile unsorted, SortRecorder record) {
-    
+    record.add(unsorted);
     ArrayDeque<CardPile> queue = new ArrayDeque<CardPile>();
     while(unsorted.size() > 0){
       CardPile temp = new CardPile();
-      temp.add(unsorted.removeFirst());
+      temp.add(unsorted.remove());
       queue.add(temp);
     }
-    CardPile A = new CardPile();
-    CardPile B = new CardPile();
-    CardPile C = new CardPile();
     while (queue.size() > 1){
-      A = queue.removeFirst();
-      B = queue.removeFirst();
-      while ((A.size() > 0) || (B.size() > 0)){
-        if (A.get(0).compareTo(B.get(0)) > 0){
+      CardPile A = queue.removeFirst();
+      CardPile B = queue.removeFirst();
+      CardPile C = new CardPile();
+      while ((A.size() > 0) && (B.size() > 0)){
+        if (A.getFirst().compareTo(B.getFirst()) < 0){
           C.add(A.removeFirst());
         }
         else{
@@ -31,33 +29,14 @@ public class MergeSort {
       else if (B.size() > 0){
         C.append(B);
       }
-      record.next();        // tell it this is a new step
-      for (CardPile pile: queue) { // add all piles
+      queue.add(C);
+      record.next();
+      for (CardPile pile: queue) {
         record.add(pile);
       }
-      queue.add(C);
     }
-  
-    // ***********************************************************
-    // Here is where you'll do the "work" of MergeSort:
-    //   - Use queue to store the intermediate piles
-    //   - Don't forget to register the new state with the
-    //     recorder after each merge step:
-    //        record.next();        // tell it this is a new step
-    //        for (CardPile pile: queue) { // add all piles
-    //           record.add(pile);
-    //        }
-    // ***********************************************************
-
     return queue.remove();
   }
-
-  /*
-- Begin by placing each element of `unsorted` into its own new singleton `CardPile` and add all those piles to a queue.
-- While more than one list remains on the queue:
-  - Remove the first two lists from the queue and merge them, preserving their sorted order.
-  - Put the result back at the end of the queue.
- */
 
   public static void main(String args[]) {
 
